@@ -1,3 +1,9 @@
+06/08/2011 Changes
+
+Turning bootstrapped classes into full classes at load, rather than on first message not found.
+This loading increased startup time, and makes run more predictable.
+
+
 04/08/2011 Changes
 
 Added start of stout - the Redline simple web tool - started by Pat Maddox and myself at
